# StockSignalAnalyzer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG_STRATEGY.md  Dockerfile  EXPERIMENTS.md  OPERATIONS.md  PHASE_B_REMEDIATION_AUDIT.md  PHASE_B_REMEDIATION_PLAN.md  PHASE_B_RISK_LOGIC_AUDIT.md  PHASE_C_PRE_IMPLEMENTATION_REVIEW.md  PIPELINE_GO_NOGO.md  PROJECT_STATE.md  README.md  ai_pipeline_validation_report.md  alembic.ini  azure_ai_validation_report.md  backend_runtime_audit.md  broker_validation_report.md  check_admin.py  check_candles.py  clear_ratelimit.py  dashboard_validation_report.md  docker-compose.yml  entrypoint.sh  environment_validation_report.md  execution_mode_audit.md  final_platform_readiness_report.md  fix_broker_sessions.py  fix_instruments_columns.py  frontend_backend_integration_report.md  frontend_runtime_audit.md  frontend_validation_report.md  kite_session_lifecycle_report.md  launch_platform.ps1  launch_platform.sh  news_integration_report.md  opportunity_ranking_report.md  production_readiness_report.md  (+12 more)
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260101_0730_phase4_create_tables.py  20260612_0800_phase6_add_auth_columns.py  20260613_0900_phase12_signal_performance_stats.py  20260614_1000_phase13_risk_engine.py  20260614_1100_phase15_oms.py  20260615_0900_phase17_capital_framework.py  20260615_1200_phase19_reconciliation_engine.py  20260615_1300_fix_broker_sessions_columns.py  20260615_1400_phase28_market_intelligence.py  20260616_1000_phase18_production.py  (+22 more)
config/: broker.yaml  capital_allocations.yaml  confidence.yaml  events.yaml  market_context.yaml  oms.yaml  overlay_config.yaml  regime.yaml  risk.yaml  risk_profiles.yaml  scoring_weights.yaml  signal.yaml  strategy.yaml  universe.yaml
deploy/: bootstrap.sh  nginx.conf  stocksignal-backend.service  stocksignal-frontend.service
docs/: 00_PROJECT_CONSTITUTION.md  01_ARCHITECTURE.md  02_SYSTEM_FLOW.md  03_DATABASE_DESIGN.md  04_BROKER_ABSTRACTION.md  05_SIGNAL_ENGINE.md  06_RISK_ENGINE.md  07_AI_USAGE.md  08_DEVELOPMENT_ROADMAP.md  09_CLAUDE_EXECUTION_RULES.md  10_SIGNAL_RESEARCH_RULES.md  11_EVENT_BUS_ARCHITECTURE.md  12_WEBSOCKET_MANAGER.md  13_INSTRUMENT_MASTER.md  14_KILL_SWITCH_DESIGN.md  15_AI_PROVIDER_ABSTRACTION.md  16_SIGNAL_SCORING_ENGINE.md  17_PORTFOLIO_RISK_ENGINE.md  18_TIMESCALEDB_ARCHITECTURE.md  19_STRATEGY_FRAMEWORK.md  20_MARKET_REGIME_ENGINE.md  21_SIGNAL_ENGINE.md  22_OMS_DESIGN.md  23_SECURITY_BASELINE.md  IMPLEMENTATION_PLAN.md  PHASE_13_FINAL_READINESS_REVIEW.md  PHASE_13_IMPLEMENTATION_PLAN.md  PHASE_13_READINESS_REPORT.md  PHASE_13_REMEDIATION_PLAN.md  PHASE_13_RISK_ENGINE_ARCHITECTURE_AUDIT.md  SCORING_CONFIDENCE_INTEGRATION_REVIEW.md  SIGNAL_FLOW.md  TRADING_PLATFORM_GLOSSARY.md  USER_GUIDE.md  dte_optimization_report.md  expiry_day_logic_report.md  intraday_risk_model_report.md  intraday_signal_performance_report.md  intraday_strategy_ranking.md  market_close_exit_report.md  (+5 more)
frontend/: .dockerignore  Dockerfile  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
nginx/: nginx.conf
runbooks/: broker_outage.yaml  database_outage.yaml  emergency_shutdown.yaml  kill_switch_activation.yaml  market_data_outage.yaml  recovery_procedures.yaml  redis_outage.yaml
scripts/: run_backfills.py  start_backend.ps1  start_frontend.ps1  verify_environment.ps1
src/: app.py  container.py  main.py
tests/: conftest.py
(+890 files in other folders)
