[tool.poetry]
name = "stocksignalanalyzer"
version = "0.1.0"
description = "Institutional-grade NSE FnO trading platform"
authors = ["StockSignalAnalyzer Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12 || ^3.13"
fastapi = { version = "^0.115", extras = ["standard"] }
pydantic = "^2.10"
pydantic-settings = "^2.7"
structlog = "^25.1"
dependency-injector = "^4.43"
pyyaml = "^6.0"
python-dotenv = "^1.0"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "^0.30"
alembic = "^1.14"
redis = { version = "^5.2", extras = ["hiredis"] }
prometheus-client = ">=0.20"
pyjwt = { version = "^2.9", extras = ["crypto"] }
argon2-cffi = "^23.1"
kiteconnect = { version = "^5.0", optional = true }
apscheduler = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.1"
httpx = "^0.28"
anyio = { version = "^4.6", extras = ["trio"] }
ruff = "^0.11"
mypy = "^1.14"
pip-audit = "^2.7"
types-pyyaml = "^6.0"
aiosqlite = "^0.20"


# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "T20", # flake8-print (bans print())
    "ANN", # flake8-annotations (type hints)
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "ANN401", # dynamically typed expressions (Any) — acceptable in processors
    "S101",   # use of assert (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["core"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = true
explicit_package_bases = true
mypy_path = "src"
exclude = ["tests/", "alembic/"]

[[tool.mypy.overrides]]
module = ["dependency_injector.*", "yaml.*", "asyncpg.*", "alembic.*", "redis.*", "kiteconnect.*", "argon2.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--strict-markers --tb=short"
markers = [
    "unit: pure unit tests (no I/O)",
    "integration: tests that require running services",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
